# recall-ai

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml
.vscode.sample/: extension.json  launch.json  settings.json
docs/: SETUP.md
src/recall_ai/: context.py  logging_config.py  run_bot.py  services.py
src/recall_ai/ai/: vectorstore.py
src/recall_ai/ai/embeddings/: embedding_service.py
src/recall_ai/ai/memory/: memory_store.py  models.py
src/recall_ai/api/: server.py
src/recall_ai/bot/: client.py
src/recall_ai/bot/cogs/: basic.py
src/recall_ai/bot/commands/: save_memory.py
tests/: test_health.py  test_ingest.py
